--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
           {{ todo.content }}
           {% endif %}
           <a href="{{ url_for("delete", id=todo.id) }}" class="a-no-underline">
-            <span>🞬</span>
+            <span>ⓧ</span>
           </a>
         </form>
       </div>
