--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <div class="todo-add">
       <form action="{{ url_for("add") }}" method="POST">
         <input type="text" name="added-todo" placeholder="Ex: Go to store" />
-        <input type="submit" value="Add Item" />
+        <input type="submit" value="Add Item" class="button" />
       </form>
     </div>
     <div class="todo-list">
