--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,15 +5,40 @@
 input {
   font-size: x-large;
   padding: 0.5rem;
+  border: none;
+  border-bottom: 2px solid black;
+}
+
+/* Increase checkbox sizes */
+input[type='checkbox'] {
+  transform: scale(1.5);
 }
 
 html {
-  padding: 10px;
+  padding: 0.5rem;
 }
 
 .a-no-underline {
   text-decoration: none;
   color: black;
+}
+
+.a-no-underline:hover {
+  color: gray;
+}
+
+.close-icon {
+  color: transparent;
+}
+
+/* Make close icon red when you hover anywhere on the item */
+.todo-item:hover .close-icon {
+  color: red;
+}
+
+/* Show if tabbed to a transparent icon via keyboard */
+.close-icon:focus {
+  color: red;
 }
 
 .button {
@@ -25,8 +50,7 @@ html {
 }
 
 .todo-add {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 2rem 0;
 }
 
 .todo-item {
@@ -36,4 +60,8 @@ html {
 
 .todo-check {
   margin-inline: 10px;
+}
+
+.finished-todo {
+  text-decoration: line-through;
 }
