--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,19 @@
     	{% for todo in todos %}
       <div class="todo-item">
         <form action="{{ url_for("update", id=todo.id) }}">
-          <input type="checkbox" class="todo-check" onchange="this.form.submit()" {{ "checked" if todo.complete }} />
-          {% if todo.complete %}
-          <del>{{ todo.content }}</del>
-          {% else %}
-          {{ todo.content }}
-          {% endif %}
-          <a href="{{ url_for("delete", id=todo.id) }}" class="a-no-underline">
-            <span>ⓧ</span>
-          </a>
+          <input 
+            type="checkbox" 
+            onchange="this.form.submit()" 
+            class="todo-check"
+            {{ "checked" if todo.complete }} />
+            {% if todo.complete %}
+            <span class="finished-todo">{{ todo.content }}</span>
+            {% else %}
+            <span >{{ todo.content }}</span>
+            {% endif %}
+            <a href="{{ url_for("delete", id=todo.id) }}" class="a-no-underline close-icon">
+              <span>ⓧ</span>
+            </a>
         </form>
       </div>
       {% endfor %}
