--- a/templates/index.html
+++ b/templates/index.html
@@ -19,23 +19,34 @@
     </div>
     <div class="todo-list">
     	{% for todo in todos %}
-      <div class="todo-item">
-        <form action="{{ url_for("update", id=todo.id) }}">
-          <input 
-            type="checkbox" 
-            onchange="this.form.submit()" 
-            class="todo-check"
-            {{ "checked" if todo.complete }} />
-            {% if todo.complete %}
-            <span class="finished-todo">{{ todo.content }}</span>
-            {% else %}
-            <span >{{ todo.content }}</span>
-            {% endif %}
-            <a href="{{ url_for("delete", id=todo.id) }}" class="a-no-underline close-icon">
+      <form 
+        action="{{ url_for("update", id=todo.id) }}"
+        class="todo-form"
+      >
+        <div class="todo-item">
+          <div class="left">
+            <input 
+              type="checkbox" 
+              onchange="this.form.submit()"
+              class="todo-check"
+              {{ "checked" if todo.complete }}
+            />
+            <span 
+              class="todo-content {{'finished-todo' if todo.complete}}"
+            >
+              {{ todo.content }}
+            </span>
+          </div>
+          <div class="right">
+            <a 
+              href="{{ url_for("delete", id=todo.id) }}" 
+              class="a-no-underline close-icon"
+            >
               <span>ⓧ</span>
             </a>
-        </form>
-      </div>
+          </div>
+        </div>
+      </form>
       {% endfor %}
     </div>
   </body>
