--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,14 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/styles.css') }}"
     />
-    <title>Flask Todo App</title>
+    <title>Flask Todo</title>
   </head>
   <body>
-    <h1>Todo List</h1>
     <div class="todo-add">
-      <form action="{{ url_for("add") }}" method="POST">
-        <input type="text" name="added-todo" placeholder="Ex: Go to store" />
-        <input type="submit" value="Add Item" class="button" />
+      <form action="{{ url_for("add") }}" method="POST" class="parent">
+        <div class="left input-container">
+          <input type="text" name="added-todo" placeholder="add todo item..."/>
+        </div>
       </form>
     </div>
     <div class="todo-list">
@@ -23,7 +23,7 @@
         action="{{ url_for("update", id=todo.id) }}"
         class="todo-form"
       >
-        <div class="todo-item">
+        <div class="parent todo-item">
           <div class="left">
             <input 
               type="checkbox" 
@@ -34,7 +34,7 @@
             <span 
               class="todo-content {{'finished-todo' if todo.complete}}"
             >
-              {{ todo.content }}
+              {{ todo.content|lower }}
             </span>
           </div>
           <div class="right">
