Change placeholder text

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div class="todo-add">
       <form action="{{ url_for("add") }}" method="POST" class="parent">
         <div class="left input-container">
-          <input type="text" name="added-todo" placeholder="add todo item..."/>
+          <input type="text" name="added-todo" placeholder="add task to do today ..."/>
         </div>
       </form>
     </div>
