--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="todo-list">
     	{% for todo in todos %}
       <form 
-        action="{{ url_for("update", id=todo.id) }}"
+        action="{{ url_for("complete", id=todo.id) }}"
         class="todo-form"
       >
         <div class="parent todo-item">
